This is third commit

--- a/Sample/projectProperties.json
+++ b/Sample/projectProperties.json
@@ -250,11 +250,13 @@
     "blockedChatMessages": "false",
     "bluetooth": "false",
     "build": "debug",
+    "buildExclusion": {},
     "buildWarCompatability": "false",
     "build_gradle_attrs_prefix": "",
     "build_gradle_attrs_prefix_andwear": "",
     "build_gradle_attrs_suffix": "",
     "build_gradle_attrs_suffix_andwear": "",
+    "buttonAsLabel": true,
     "camerasettings": "",
     "category": "app",
     "certs_key_store_pwd": "",
@@ -278,6 +280,7 @@
     "createdgaversion": "8.3.0",
     "currentgaversion": "9.2.43",
     "deeplinkkey": "None",
+    "defaultlocalekey": "ar",
     "defaulttheme": "defaultTheme",
     "desktopwebaligenmentoption": "left",
     "desktopwebbasefontsize": "16",
@@ -318,6 +321,7 @@
     "genericexceptionalert": "false",
     "gradle_properties_attrs": "",
     "gradle_properties_attrs_andwear": "",
+    "hiddenAppGroups": {},
     "hostkey": "",
     "hostkey_andwear": "",
     "imagewhendownloading": "",
@@ -679,6 +683,7 @@
     "support64bitandwear": "false",
     "supportX86Devices": "false",
     "supportX86Devicesandwear": "false",
+    "tabletstartupformkey": "d36bf55fe31a4861a9ce05bd8b00b614",
     "tags": {
         "android": {
             "activity_child_tags": "",
